# foske

./: CMakeLists.txt  README.md
cmd/: labs.cpp  main.cpp
include/: app.h  common.h
include/onlabs/: common.h  first.h
src/: app.cpp  common.cpp
src/onlabs/: common.cpp  first.cpp
